style.css
/* ... */
#soft_burst {
  transform: translateX(-13px);
  fill: var(--primary-light);
  vertical-align: middle;
  position: absolute;
}
#soft_burst ~ span {
  margin-left: 4px;
}
#field {
  background: var(--primary-background);
  position: sticky;
  top: 0;
  padding: 4px 8px;
  z-index: 10;
  display: flex;
  align-items: center;
  gap: 0.5rem;
}
body,
html {
  box-sizing: border-box;
  overflow-x: hidden;
  user-select: none;
  accent-color: var(--primary-light);
  background-color: var(--primary-background);
  color: #231918;
}
body {
  margin: 0 8px;
}
button {
  font-family: inherit;
}
button:focus {
  outline: revert !important;
}
dialog {
  border: 0;
  border-radius: 2rem;
  background-color: var(--primary-background);
  padding: 16px;
  max-width: calc(100vw - 60px);
  max-height: calc(100vh - 60px);
  animation: popIn 0.3s;
  overflow-x: hidden;
  user-select: none;
  outline: none;
  view-transition-name: dialog;
  width: 292px;
}

@keyframes popIn {
  from {
    max-height: 0px;
    padding: 0;
    opacity: 0;
    overflow: hidden;
  }
}
section div,
section #submenu {
  background-color: var(--primary-foreground-faded);
  padding: 8px 10px;
  margin-bottom: 0.125rem;
  border-radius: 0.25rem;
  backdrop-filter: blur(1px);
  -webkit-backdrop-filter: blur(1px);
  font-family: Google Sans Flex, Inter, system-ui;
}
.day section div {
  padding: 0px 10px;
}

.tooltip {
  position: fixed;
  background: var(--primary-accent);
  color: var(--accent-text);
  padding: 8px 10px;
  border-radius: 0.5rem;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
  opacity: 0;
  transition: ease-in opacity 0.1s;
  font-size: 0.875rem;
  font-family: Google Sans Flex, Inter, system-ui;
  font-weight: 500;
  font-variation-settings: "opsz" 20, "ROND" 100;
  width: max-content;
  max-width: calc(100% - 40px);
  pointer-events: none;
}
.tooltip[data-show] {
  opacity: 1;
}
.check {
  display: none;
}
h2.date {
  margin: 8px auto;
  color: var(--accent-text);
  fill: var(--primary-light);
  text-align: center;
}
.selected .check {
  display: inline;
}
section div:first-of-type,
section #submenu:first-of-type {
  border-top-left-radius: 1rem;
  border-top-right-radius: 1rem;
}
section div:last-of-type,
section #submenu:last-of-type {
  border-bottom-left-radius: 1rem;
  border-bottom-right-radius: 1rem;
  margin-bottom: 0;
}

#week {
  font-family: Google Sans Flex, Inter, system-ui;
  font-weight: 500;
  line-height: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 1.25rem;
  font-size: 0.875rem;
}
#warningIcon {
  vertical-align: sub;
  fill: #ff9800;
}
.warning {
  position: absolute;
  bottom: 6px;
  right: 6px;
}
th {
  font-size: 16px;
  font-weight: 450;
  text-align: left;
  padding: 8px;
  font-family: Google Sans Flex;
  background-color: var(--primary-foreground);
  border-radius: 0.4rem;
  border: 2px solid var(--primary-background);
}
kbd {
  font-family: inherit;
  border-radius: 0.4rem;
  padding: 4px 8px;
  line-height: 2;
  background-color: var(--primary-background);
  color: var(--accent-text);
}
table {
  width: 100%;
  border-collapse: collapse;
  margin-bottom: 5px;
}
#shortcuts,
#shortcuts #content {
  width: 400px;
}
section #submenu {
  padding: 10px 12px;
  font-weight: 500;
  letter-spacing: 0.1px;
  font-size: 1rem;
  width: 100%;
  border: 0;
  display: flex;
  align-items: center;
  gap: 0.6rem;
  color: var(--accent-text-light);
}
hr {
  height: 0.4375rem;
  border-width: 0;
  background-color: transparent;
  margin: 0px;
}
#link {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.25rem;
}
#link #icon:nth-child(2) {
  fill: var(--thumb-background) !important;
}
#linkText {
  font-weight: 450;
  letter-spacing: 0.1px;
}

strong.lesuur {
  position: absolute;
  right: 13px;
  translate: 0 -1px;
}
h2 {
  font-size: 1.25rem;
  font-weight: 500;
  margin-top: 0;
  margin-left: 4px;
  margin-bottom: 12px;
  font-family: Google Sans Flex, Inter, system-ui;
}

.les p,
.les span,
strong.date,
.change {
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.00625rem;
  display: inline;
  font-family: Google Sans Flex, Inter, system-ui;
  font-variation-settings: "opsz" 20, "ROND" 100;
}
strong.date {
  margin: 8px 12px;
  color: var(--primary-light);
  display: flex;
  align-items: center;
  font-weight: 600;
}

.warning[style="bottom: 5px"] svg {
  width: 22px;
  margin-right: 1px;
}

p.lestijden {
  display: inline;
}

strong {
  font-weight: 600;
  letter-spacing: 0.00625rem;
  font-family: Google Sans Rounded;
}

details strong {
  font-size: inherit;
}

#schedule {
  margin-top: 2.5rem;
  transition: transform ease-in-out 0.1s;
  will-change: transform;
}
#schedule div {
  flex: 1;
}
.weekEnabled,
.dayEnabled,
.ltrEnabled {
  display: flex;
  gap: 10px;
}
.dayEnabled {
  gap: 12px;
}
#schedule.listEnabled {
  margin-top: 3.3125rem;
}
#schedule.ltrEnabled {
  flex-direction: column;
  gap: 0;
  margin-top: 2.5rem;
}
.ltrEnabled strong.date {
  margin: 12px;
}
.ltrEnabled .day div {
  display: flex;
}
.ltrEnabled .les p {
  display: block;
}
.ltrEnabled .warning {
  bottom: 22px !important;
}
.les {
  min-height: var(--height);
  transition: filter 0.1s cubic-bezier(1, 0, 0, 1);
  cursor: pointer;
  position: relative;
  display: flex;
  align-items: center;
  line-height: 1.4;
}
#schedule .les.clicked {
  filter: brightness(1.15);
}
#info .les {
  padding: 0px 10px;
  min-height: var(--height);
}
#info .groups {
  display: none;
}
.moreInfo {
  display: flex;
  gap: 0.4rem;
}
.dates p {
  display: block;
}
#info .dates {
  cursor: default;
  padding: 0;
}
#schedule section {
  margin-top: var(--margin);
}
section div br:not(:first-of-type) {
  display: none;
}
.ltrEnabled section {
  display: flex;
  margin-top: 0 !important;
  margin-left: calc(var(--margin) * 2.78);
}
.ltrEnabled section div br:not(:first-of-type) {
  display: block;
}
/* ... */

